시각화 Trainer에 추가
#2 #16 Train에도 간단한 시각화 추가

--- a/code/test/PPO_test.ipynb
+++ b/code/test/PPO_test.ipynb
@@ -166,9 +166,9 @@
         "        surrogate2 = clipped_ratio * advantage\n",
         "        return torch.min(surrogate1, surrogate2).mean()\n",
         "\n",
-        "    def cal_advantage(self, memory, lam=0.95):\n",
-        "        # set memory\n",
-        "        states, _, rewards, next_states, dones, _ = zip(*memory)\n",
+        "    def cal_advantage(self, self.memory, lam=0.95):\n",
+        "        # set self.memory\n",
+        "        states, _, rewards, next_states, dones, _ = zip(*self.memory)\n",
         "\n",
         "        states = torch.cat(states, dim=0)\n",
         "        next_states = torch.cat(next_states, dim=0)\n",
@@ -194,9 +194,9 @@
         "\n",
         "        return torch.tensor(advantage, dtype=torch.float32).unsqueeze(1)\n",
         "\n",
-        "    def train(self, memory, advantage):\n",
-        "        # set memory\n",
-        "        states, actions, rewards, next_states, dones, old_log_probs = zip(*memory)\n",
+        "    def train(self, self.memory, advantage):\n",
+        "        # set self.memory\n",
+        "        states, actions, rewards, next_states, dones, old_log_probs = zip(*self.memory)\n",
         "\n",
         "        states = torch.cat(states, dim=0)\n",
         "        actions = torch.cat(actions)\n",
@@ -286,7 +286,7 @@
         "    moving_avg_rewards = deque(maxlen=50)\n",
         "\n",
         "    for episode in range(N_ITERATIONS):\n",
-        "        memory = []\n",
+        "        self.memory = []\n",
         "        state = env.reset()\n",
         "        state = torch.tensor(state, dtype=torch.float32).unsqueeze(0)\n",
         "        done = False\n",
@@ -302,7 +302,7 @@
         "            next_state, reward, done, _ = env.step(action)\n",
         "            next_state = torch.tensor(next_state, dtype=torch.float32).unsqueeze(0)\n",
         "\n",
-        "            memory.append([\n",
+        "            self.memory.append([\n",
         "                state,\n",
         "                torch.tensor([[action]]),\n",
         "                torch.tensor([reward], dtype=torch.float32),\n",
@@ -317,8 +317,8 @@
         "        episode_rewards.append(ep_reward)\n",
         "        moving_avg_rewards.append(ep_reward)\n",
         "\n",
-        "        advantage = agent.cal_advantage(memory)\n",
-        "        loss = agent.train(memory, advantage)\n",
+        "        advantage = agent.cal_advantage(self.memory)\n",
+        "        loss = agent.train(self.memory, advantage)\n",
         "\n",
         "        avg_reward = np.mean(moving_avg_rewards)\n",
         "        print(f\"Episode {episode:3d} | Loss: {loss: .4f} | Reward: {ep_reward:3.0f} | Avg(50): {avg_reward: .2f} | Len: {ep_len}\")\n",
