#8 자동화 실험 스크립트

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -42,7 +42,7 @@
     "from config import CONFIG\n",
     "from easydict import EasyDict\n",
     "\n",
-    "from env.env import *\n",
+    "from env.BasicEnv import *\n",
     "from state.state import *\n",
     "from agent.PPOAgent_ms import *\n",
     "from models.CTTS import *\n",
